adding feature to add/withdraw money

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,17 @@
 # Money Tracker Configuration
 # Copy this file to .env and customize the values
 
-# Initial amount in dollars
+# NOTE: Initial configuration is now in public/transactions.json
+# These environment variables are kept for backward compatibility
+# but transactions.json is the recommended way to configure the app
+
+# Initial amount in dollars (fallback if transactions.json is not found)
 VITE_INITIAL_AMOUNT=1000
 
-# Annual interest rate as a percentage (e.g., 7 for 7%)
+# Annual interest rate as a percentage (fallback if transactions.json is not found)
 VITE_ANNUAL_INTEREST_RATE=7
 
-# Start date in YYYY-MM-DD format (defaults to 1 year ago from today)
+# Start date in YYYY-MM-DD format (fallback if transactions.json is not found)
 VITE_START_DATE=2024-01-01
 
 # Base path for GitHub Pages (e.g., /money-tracker for username.github.io/money-tracker)
